--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.pratik.groupmoneymanager">
 
@@ -7,6 +8,26 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+
+        <activity
+            android:name=".AllEvents"
+            android:label="@string/title_activity_all_events">
+
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+
+        </activity>
+
+        <activity
+            android:name=".NewEvent"
+            android:label="@string/title_activity_create_new_event" />
+
+        <activity
+            android:name=".AddParticipants"
+            android:label="@string/title_activity_add_participants" />
 
     </application>
 
